--- a/app/src/main/res/layout/activity3_addmemo.xml
+++ b/app/src/main/res/layout/activity3_addmemo.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity3_add">
+    tools:context=".Activity3_addmemo">
 
     <EditText
-
-        android:id="@+id/editMemo"
-        android:hint="메모입력"
+        android:id="@+id/edtMemo"
+        android:hint="메모를 입력하세요."
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"/>
@@ -19,7 +18,7 @@
         android:id="@+id/completeButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editMemo"
+        android:layout_below="@+id/edtMemo"
         android:text="입력완료"/>
 
 
